@@ -142,6 +142,9 @@ Release 2.8.0 - UNRELEASED
     YARN-2495. Allow admin specify labels from each NM (Distributed 
     configuration for node label). (Naganarasimha G R via wangda)
 
+    YARN-3258. FairScheduler: Need to add more logging to investigate
+    allocations. (Anubhav Dhoot via ozawa)
+
   OPTIMIZATIONS
 
     YARN-3339. TestDockerContainerExecutor should pull a single image and not
